--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.55.0",
     "scss": "^0.2.4",
     "styled-components": "^5.3.5",
+    "swiper": "^8.4.2",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
